--- a/style.css
+++ b/style.css
@@ -50,8 +50,11 @@ p {
     color: black;
 }
 .hov {
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(131, 131, 131);
+}
+.test {
+    color: rgb(131, 131, 131);
 }
 .hov:hover {
-    visibility: hidden;
+    background-color: lightgray;
 }
